2009-09-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
   src/plugindata.h, src/plugins.c, src/editor.c,
   plugins/geanyfunctions.h:
   Add sci_set_marker_at_line(), sci_delete_marker_at_line(),
   sci_is_marker_set_at_line() to the plugin API (thanks to Yura
   Siamashka).
   Add sci_toggle_marker_at_line().
   Fix SciFuncs alignment.


2009-09-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c
   Fix erroneous free of returned string in prepare_run_script.


2009-09-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/filetypes.latex:
   Changing default value for showing pdf and dvi to ensure to take
   *.pdf and *.dvi file.


2009-09-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS:
   Change language string for Slovenian translation.


2009-09-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/txt2tags.c:
   Fix multi-byte character constant comparison.
 * src/treeviews.c:
   Fix Gtk warning when trying to update documents popup menu item
   sensitivity before they exist.


2009-09-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/plugins.c:
   Improve the opening string in the plugin manager dialog.
 * doc/geany.css:
   Use "max-width" to set the document width of the generated
   HTML documentation to let the text be auto-wrapped.
 * src/prefs.c, src/tagmanager/include/guregex.h,
   src/tagmanager/include/tm_tagmanager.h:
   Remove trailing spaces (patch by André Hentschel, thanks).
 * src/treeviews.c:
   Fix a compiler warning.
 * src/document.c:
   Fix crash when opening documents.
 * src/build.c, src/build.h, src/project.c:
   Adjust coding style (no code changes).
 * src/build.c, src/project.c:
   Use NZV() macro instead of strlen() to check for empty strings.
   Remove the FOREACH_GEANYBUILDCMD_ENTRY() macro.
 * doc/plugins.dox, plugins/geanyfunctions.h, src/document.c,